tests/chapter_17/invalid_types/scalar_expressions/and_void.c
int main(void) { return (void)1 && 2; }